2010-05-13  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/FindOpenCV.cmake: freshen OpenCV search script.

2010-05-10  Ugo Pattacini <ugo.pattacini@iit.it>

	* src/libYARP_DEV/include/yarp/dev/GazeControl.h: added the interface
    for the control of the gaze.

2010-05-05  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/CMakeLists.txt and lots of others: big cmake clean-up.
	Report breakage please!  In case you need a working YARP in
	a hurry, use revision r7841 (svn update -r 7841)
	
2010-05-04  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpVersion.cmake: bump version up to 2.2.7, probably
	last release before a biggish CMake reorganization.

2010-04-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ResourceFinder.cpp: fix "found"
	message not correctly controlled by verbosity flag
	(thanks Gianluca Massera).

2010-04-15 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/Run.cpp
	* src/libYARP_OS/include/yarp/os/Run.h
	Added xterm LIBPATH bug workaround
	Added error messages

2010-04-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Carriers.cpp: add experimental MPI
	carrier from Daniel Krieg (thanks Daniel!)

2010-04-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/CMakeLists.txt: small fix for CMake 2.8, remove use
	of deprecated SUB_DIRS

2010-03-29  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/include/yarp/os/all.h: add RpcClient and
	RpcServer to the standard set of includes.

	* src/libYARP_OS/src/Companion.cpp: allow carriers to be 
	specified either on source or destination port in "yarp
	connect"

2010-03-24 Lorenzo Natale <lorenzo.natale@iit.it>
	* src/libYARP_sig/src/Matrix.cpp
    * src/libYARP_sig/include/yarp/sig/Matrix.h
        Matrix::transposed() is now a const method
        
2010-03-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: tab at the start of a line was