@@ -16,20 +16,20 @@ ENDIF (SKIP_serial AND SKIP_serialport)
 IF (NOT SKIP_all_serial)
 
 FIND_PACKAGE(YARP REQUIRED)
-FIND_PACKAGE(Ace)
+FIND_PACKAGE(ACE)
 
-IF (Ace_FOUND)
-  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${YARP_INCLUDE_DIRS} ${ACE_INCLUDE_DIR})
-  LINK_LIBRARIES(${YARP_LIBRARIES} ${ACE_LIBRARY})
+IF (ACE_FOUND)
+  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${YARP_INCLUDE_DIRS} ${ACE_INCLUDE_DIRS})
+  LINK_LIBRARIES(${YARP_LIBRARIES} ${ACE_LIBRARIES})
   ADD_DEFINITIONS(${YARP_DEFINITIONS})
 
   ADD_LIBRARY(yarp_serial SerialDeviceDriver.cpp SerialDeviceDriver.h)
 
-ELSE (Ace_FOUND)
+ELSE (ACE_FOUND)
 
   MESSAGE(SEND_ERROR "ACE not found; needed by serial driver")
 
-ENDIF (Ace_FOUND)
+ENDIF (ACE_FOUND)
 
 ENDIF (NOT SKIP_all_serial)
 
